--- a/index.html
+++ b/index.html
@@ -7,7 +7,19 @@
     <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
-    
+    <div class="tarolo">
+        <div class="focim">
+            <span class="focim_zold">meme</span>Invazio
+        </div>
+
+        <div class="login">
+            <button type="button" id="btnLogin">Belépés</button>
+        </div>
+
+        <div class="reg">
+            <button type="button" id="btnReg">Regisztráció</button>
+        </div>
+    </div>
 
 
     <script src="js/index.js"></script>
