--- a/html/login.html
+++ b/html/login.html
@@ -7,6 +7,23 @@
     <link rel="stylesheet" href="../css/login.css">
 </head>
 <body>
+    <div class="tarolo">
+        <div class="focim">
+            <span class="focim_zold">meme</span>Invazio
+        </div>
+
+        <div class="input">
+            <input type="email" id="email" placeholder="example@example.com">
+        </div>
+
+        <div class="input">
+            <input type="text" id="name" placeholder="John Doe">
+        </div>
+
+        <div class="login">
+            <button type="button" id="btnLogin">Bejelentkezés</button>
+        </div>
+
     <script src="../js/login.js"></script>
 </body>
 </html>
