--- a/html/login.html
+++ b/html/login.html
@@ -17,7 +17,7 @@
         </div>
 
         <div class="input">
-            <input type="text" id="name" placeholder="John Doe">
+            <input type="password" id="psw" placeholder="******">
         </div>
 
         <div class="login">
