--- a/html/login.html
+++ b/html/login.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html lang="hu">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Memeinvázió</title>
+    <title>memeinvázió</title>
     <link rel="stylesheet" href="../css/login.css">
 </head>
+
 <body>
     <div class="tarolo">
         <div class="focim">
-            <span class="focim_zold">meme</span>Invazio
+            <span class="focim_zold">meme</span>invazio
         </div>
 
         <div class="input">
@@ -23,7 +25,9 @@
         <div class="login">
             <button type="button" id="btnLogin">Bejelentkezés</button>
         </div>
+    </div>
 
     <script src="../js/login.js"></script>
 </body>
+
 </html>
