--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Memeinvázió</title>
-    <link rel="stylesheet" href="css/index.css">
+    <title>memeinvázió</title>
+    <link rel="stylesheet" href="./css/index.css">
 </head>
 <body>
     <div class="tarolo">
         <div class="focim">
-            <span class="focim_zold">meme</span>Invazio
+            <span class="focim_zold">meme</span>invazio
         </div>
 
         <div class="login">
@@ -20,8 +20,6 @@
             <button type="button" id="btnReg">Regisztráció</button>
         </div>
     </div>
-
-
-    <script src="js/index.js"></script>
+    <script src="./js/index.js"></script>
 </body>
 </html>
