--- a/html/registration.html
+++ b/html/registration.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/regisztracio.css">
-    <title>Memeinvázió</title>
+    <title>memeinvázió</title>
+    <link rel="stylesheet" href="../css/registration.css">
 </head>
 <body>
     <div class="tarolo">
         <div class="focim">
-            <span class="focim_zold">meme</span>Invazio
+            <span class="focim_zold">meme</span>invazio
         </div>
-
+    
         <div class="input">
             <input type="email" id="email" placeholder="example@example.com">
         </div>
@@ -27,14 +27,12 @@
         <div class="input">
             <input type="password" id="psw2" placeholder="******">
         </div>
-
+    
         <div class="reg">
             <button type="button" id="btnReg">Regisztráció</button>
         </div>
     </div>
 
-
-
-    <script src="../js/regisztracio.js"></script>
+    <script src="../js/registration.js"></script>
 </body>
 </html>
